# markdown-gfm-admonition

./: .editorconfig  .gitignore  AGENTS.md  README.md  markdown_gfm_admonition.py  pyproject.toml  test.py  tox.ini
.github/workflows/: build.yaml
