[build-system]
requires = ["setuptools >= 77"]

[project]
name = "markdown-gfm-admonition"
version = "0.2.0"
description = "GFM admonition syntax for Python Markdown"
readme = "README.md"
authors = [
  { name = "Hong Minhee", email = "hong@minhee.org" }
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">= 3.9"
dependencies = [
  "Markdown >= 3.2"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Filters",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Repository = "https://github.com/dahlia/markdown-gfm-admonition"
"Issue Tracker" = "https://github.com/dahlia/markdown-gfm-admonition/issues"

[project.entry-points."markdown.extensions"]
gfm_admonition = "markdown_gfm_admonition:GfmAdmonitionExtension"

[tool.setuptools]
py-modules = ["markdown_gfm_admonition"]
